--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Dan Padgett and Ashley Kramer Wedding">
+    <meta name="author" content="Dan Padgett">
 
-    <title>Padgett Wedding 2015</title>
+    <title>Padgett Wedding 2016</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -54,10 +54,10 @@
                         <a class="page-scroll" href="#countdown">Countdown</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#wedding_location">Wedding Location</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#rsvp">RSVP</a>
                     </li>
                 </ul>
             </div>
@@ -82,6 +82,8 @@
         </div>
     </header>
 
+    <section class="content-section text-center flip"></section>
+
     <!-- Countdown Section -->
     <section id="countdown" class="container content-section text-center">
         <div class="row">
@@ -97,11 +99,61 @@
         </div>
     </section>
 
-    <section id="ceremony" class="content-section text-center flip">
+    <section class="content-section text-center flip"></section>
+
+    <section id="wedding_location" class="content-section text-center">
+        
+    </section>
+
+    <section class="content-section text-center flip"></section>
+
+    <section id="rsvp" class="content-section text-center">
         <div class="row">
-            <div class="col-lg-8">
-                <iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/view?zoom=15&center=40.5515,-74.2050&key=AIzaSyCxUsDERvw7K1R-f9plWY2X5thPQ6QLsXk" allowfullscreen>
-                </iframe>
+            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                <form name="rsvp" role="form">
+                    <h2>RSVP!?</small></h2>
+                    <hr class="colorgraph">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-2 col-md-offset-3">
+                            <h3>Will you be attending the wedding?</h3>
+                            <div class="form-group">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label class="btn btn-lg btn-default active">
+                                        <input type="radio" id="attending-yes" name="attending" checked="checked" value="yes" /> <span class="glyphicon glyphicon-thumbs-up"></span> YES
+                                    </label> 
+                                    <label class="btn btn-lg btn-default">
+                                        <input type="radio" id="attending-no" name="attending" value="no" /> <span class="glyphicon glyphicon-thumbs-down"></span> NO
+                                    </label> 
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    </br>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <div class="form-group">
+                                <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="First Name" tabindex="1" required="required">
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-6">
+                            <div class="form-group">
+                                <input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Last Name" tabindex="2">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Email Address" tabindex="4">
+                    </div> 
+
+                    <div class="form-group">
+                        <textarea class="form-control" rows="5" id="comment" placeholder="Addtional Information (Optional)"></textarea>
+                    </div>
+
+                    <hr class="colorgraph">
+                    <div class="row">
+                        <div class="col-xs-12 col-md-12"><input type="submit" value="Submit" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+                    </div>
+                </form>
             </div>
         </div>
     </section>
@@ -109,7 +161,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; PadgettWedding 2015</p>
+            <p>Copyright &copy; Padgett Family 2015</p>
         </div>
     </footer>
 
@@ -121,6 +173,8 @@
 
     <!-- Plugin JavaScript -->
     <script type="text/javascript" src="js/jquery.easing.min.js"></script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAI7usZVnQlbpUZodPJhBZ-jxuWmKx4WAU&callback=initMap"></script>
 
     <script type="text/javascript" src="js/wedding.js"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
