--- a/index.html
+++ b/index.html
@@ -102,7 +102,29 @@
     <section class="content-section text-center flip"></section>
 
     <section id="wedding_location" class="content-section text-center">
-        
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                <div class="row">
+                    <div id="map"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6" style="text-align:left; padding-bottom: 0px;">
+                        <p>Grand Oaks Country Club<br>
+                        200 Huguenot Avenue<br>
+                        Staten Island<br>
+                        NY 10312<br>
+                        Ceremony @ 6:15pm<br>
+                        Reception following</p>
+                    </div>
+                    <div class="col-md-6" style="text-align:left;">
+                        <p>Holiday Inn<br>
+                        290 Wild Avenue<br> 
+                        Staten Island<br>
+                        NY 10314</p>
+                    </div>
+                </div>
+            </div>
+        </div>    
     </section>
 
     <section class="content-section text-center flip"></section>
