adding links to google map

--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
                     <div id="map"></div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6" style="text-align:left; padding-bottom: 0px;">
-                        <p>Grand Oaks Country Club<br>
+                    <div class="col-md-6 left">
+                        <h4><a onclick="map.panTo(wedding.position)">Grand Oaks Country Club</a></h4>
                         200 Huguenot Avenue<br>
                         Staten Island<br>
                         NY 10312<br>
                         Ceremony @ 6:15pm<br>
-                        Reception following</p>
+                        Reception following
                     </div>
-                    <div class="col-md-6" style="text-align:left;">
-                        <p>Holiday Inn<br>
+                    <div class="col-md-6 left">
+                        <h4><a onclick="map.panTo(hotel.position)">Holiday Inn</a></h4>
                         290 Wild Avenue<br> 
                         Staten Island<br>
-                        NY 10314</p>
+                        NY 10314
                     </div>
                 </div>
             </div>
