including favicon on page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
     <!-- Custom CSS -->
     <link href="css/wedding.css" rel="stylesheet">
+
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
