--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
         </div>
     </header>
 
-    <section class="content-section text-center flip"></section>
+    <section class="content-section text-center flip">
+        <hr class="colorgraph">
+    </section>
 
     <!-- Countdown Section -->
     <section id="countdown" class="container content-section text-center">
@@ -99,11 +101,16 @@
         </div>
     </section>
 
-    <section class="content-section text-center flip"></section>
-
+    <section class="content-section text-center flip">
+        <hr class="colorgraph">
+    </section>
+                    
     <section id="wedding_location" class="content-section text-center">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                
+                <h2>Where do we go!!?</h2>
+
                 <div class="row">
                     <div id="map"></div>
                 </div>
@@ -120,20 +127,28 @@
                         <h4><a onclick="map.panTo(hotel.position)">Holiday Inn</a></h4>
                         290 Wild Avenue<br> 
                         Staten Island<br>
-                        NY 10314
+                        NY 10314<br>
+                        (718) 698-8811
                     </div>
                 </div>
+                </br>
+                <div class="row">
+                    <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811.</p>
+                </div>
+
             </div>
         </div>    
     </section>
 
-    <section class="content-section text-center flip"></section>
+    <section class="content-section text-center flip">
+        <hr class="colorgraph">
+    </section>
 
     <section id="rsvp" class="content-section text-center">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <form name="rsvp" role="form">
-                    <h2>RSVP!?</small></h2>
+                    <h2>RSVP!?</h2>
                     <hr class="colorgraph">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 col-md-6 col-sm-offset-2 col-md-offset-3">
