--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <section id="rsvp" class="content-section text-center">
         <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+            <!--div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                 <form name="rsvp" role="form">
                     <h2>RSVP!?</h2>
                     <hr class="colorgraph">
@@ -193,7 +193,7 @@
                         <div class="col-xs-12 col-md-12"><input type="submit" value="Submit" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
                     </div>
                 </form>
-            </div>
+            </div-->
         </div>
     </section>
 
