--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
                 </div>
                 </br>
                 <div class="row">
-                    <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811.</p>
+                    <div class="col-md-12">
+                        <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811.</p>
+                    </div>
                 </div>
 
             </div>
