fixing hotel text alignment for mobile

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
                 </br>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-xs-10 col-xs-offset-1 col-md-12">
                         <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811.</p>
                     </div>
                 </div>
