--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                     <li>
                         <a class="page-scroll" href="#wedding_location">Wedding Location</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#wedding_registry">Wedding Registry</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -131,6 +134,22 @@
                     <div class="col-xs-10 col-xs-offset-1 col-md-12">
                         <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811.</p>
                     </div>
+                </div>
+
+            </div>
+        </div>    
+    </section>
+
+    <hr class="colorgraph" id="wedding_registry">
+
+    <section class="content-section text-center">
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                
+                <h2>Wedding Registry</h2>
+
+                <div class="row wedding_registry">
+                    <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos"><img src="img/wedding_registry.png" /></a>
                 </div>
 
             </div>
