--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h2>Wedding Registry</h2>
 
                 <div class="row wedding_registry">
-                    <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos"><img src="img/wedding_registry.png" /></a>
+                    <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos"><img src="http://s3.amazonaws.com/padgettwedding/wedding_registry.png" /></a>
                 </div>
 
             </div>
