--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <script type="text/javascript" src="js/wedding.js"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
-
+    <script type="text/javascript" src="js/googleanalytics.js"></script>
 </body>
 
 </html>
