adding hotel code

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </br>
                 <div class="row">
                     <div class="col-md-8 left">
-                        <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811.</p>
+                        <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811 and use the code R04.</p>
                     </div>
                 </div>
 
