adding overlay to text

--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                     <div class="col-md-8">
                         <div id="map"></div>
                     </div>
-                    <div class="col-md-4 left">
+                    <div class="col-md-4 left textbox">
+                        <br>
                         <h4><a onclick="map.panTo(wedding.position)">Grand Oaks Country Club</a></h4>
                         200 Huguenot Avenue<br>
                         Staten Island<br>
@@ -137,12 +138,15 @@
                         Staten Island<br>
                         NY 10314<br>
                         (718) 698-8811
+                        <br><br>
                     </div>
                 </div>
                 </br>
                 <div class="row">
                     <div class="col-md-8 left">
-                        <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811 and use the code R04.</p>
+                        <div class="textbox hotel-info">
+                            <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811 and use the code R04.</p>
+                        </div>
                     </div>
                 </div>
 
@@ -154,7 +158,7 @@
 
     <section id="wedding_registry" class="content-section text-center">
         <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+            <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
                 
                 <h2>Wedding Registry</h2>
 
