adding our story section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                         <a class="page-scroll" href="#wedding_location">Wedding Location</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#story">Our Story</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#wedding_registry">Wedding Registry</a>
                     </li>
                 </ul>
@@ -156,8 +159,56 @@
         </div>    
     </section>
 
+    <section id="story" class="container-full content-section flip">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <div class="text-center">
+                    <h2>Our Story</h2>
+                </div>
+                <br>
+                <div>
+                    <p>Dan and Ashley met during their first semester at SUNY Oneonta in the fall of 2008. They were 
+                        both enrolled in Sociology 101. They sat across from each other in class and Dan remembers 
+                        admiring Ashley from a far but not having the courage to move his seat closer. It wasn’t until 
+                        they saw each other at a classy Oneonta house party that they became friends. Although the 
+                        attraction between them was undeniable, they were both having so much fun during their first 
+                        year of college they weren’t ready to get into a serious relationship.</p>
+                    <p>It wasn’t until Dan’s senior year and Ashley’s junior year at SUNY Oneonta, that the two made it 
+                        official. Dan called Ashley over the summer and told her that he wanted to make her his 
+                        girlfriend and couldn’t wait any longer for them to be together. Ashley of course said yes—but 
+                        had to play hard to get—so the two became a couple on October 4th, 2010.</p>
+                    <p>Dan and Ashley enjoyed spending time together as a couple during Dan’s last year at SUNY 
+                        Oneonta. When Dan graduated he was offered an amazing opportunity to work at Rosetta 
+                        Digital Marketing in Cleveland, Ohio and their relationship was put to the test. Dan and Ashley 
+                        dated long distance during Ashley’s last year of college. Even though they were miles apart they 
+                        stayed in love and committed to each other, making sure to visit see each other—using planes, 
+                        trains, and automobiles—at least once a month.</p>
+                    <p>Upon graduation, Ashley was inducted into Teach For America as a corps member and placed 
+                        in Cleveland, Ohio! The happy couple was reunited in Cleveland and enjoyed being together in 
+                        the same city. In July of 2013, Ashley and Dan moved into their first apartment together in 
+                        Lakewood, Ohio where they lived for one year.</p>
+                    <p>Once Ashley completed her corps member experience, she accepted a position at KIPP 
+                        Academy Elementary school in the South Bronx. Dan was able to transfer to Rosetta’s New 
+                        York office and the couple relocated to Manhattan in July of 2014. Dan and Ashley enjoyed 
+                        exploring all that the Big Apple has to offer from Central Park to Times Square, museums to 
+                        restaurants, Broadway to subways!</p>
+                    <p>On July 3rd, 2015 Dan asked Ashley to accompany him on a trip to their favorite place in the 
+                        city—Central Park. He arranged a gourmet picnic lunch and found a secluded spot in the park, 
+                        by the lake, for the two to eat. After lunch, Dan asked Ashley to take a picture facing the lake. 
+                        When she turned around, Dan was on one knee asking for her hand in marriage. Ashley of 
+                        course said yes—but at first said “WHAT?!” because she was completely surprised and 
+                        extremely happy! </p>
+                    <p>Dan and Ashley are so excited to see where their journey and marriage will lead them, what 
+                        new cities and opportunities they will explore, and most importantly how much their love will 
+                        grow in the years to come! They are thrilled to be getting married, on their engagement 
+                        anniversary, July 3rd, 2016!</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-    <section id="wedding_registry" class="container-full content-section flip">
+
+    <section id="wedding_registry" class="container-full content-section">
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
                 
