adding bolding to wedding location text

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="col-md-8 left">
                         <div class="textbox hotel-info">
                             <br>
-                            <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call (718)-698-8811 and use the code R04.</p>
+                            <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call <b>(718)-698-8811</b> and use the code <b>R04.</b></p>
                             <br>
                         </div>
                     </div>
