--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <h2>Wedding Registry</h2>
 
                 <div class="row wedding_registry">
-                    <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos"><img src="http://d150j3rgby0kbc.cloudfront.net/wedding_registry.png" /></a>
+                    <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos" onclick="_trackEvent('wedding registry', 'clicked', 'name', 'Bed Bath & Beyond', false);"><img src="http://d150j3rgby0kbc.cloudfront.net/wedding_registry.png" /></a>
                 </div>
 
             </div>
