macys wedding registry

--- a/index.html
+++ b/index.html
@@ -209,13 +209,14 @@
 
 
     <section id="wedding_registry" class="container-full content-section">
-        <div class="row">
-            <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-                
-                <h2>Wedding Registry</h2>
+        <div class="row wedding_registry">
 
-                <div class="row wedding_registry">
-                    <a href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos" onclick="_trackEvent('wedding registry', 'clicked', 'name', 'Bed Bath & Beyond', false);"><img src="http://d150j3rgby0kbc.cloudfront.net/wedding_registry.png" /></a>
+            <div class="col-xs-12 col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-2">
+                <h2>Wedding Registry</h2>
+                <div class="row">
+                    <a class="store bbb" href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos" onclick="_trackEvent('wedding registry', 'clicked', 'name', 'Bed Bath & Beyond', false);"><img src="http://d150j3rgby0kbc.cloudfront.net/wedding_registry.png" /></a>
+
+                    <a class="store macys" href="http://www.macys.com/registry/wedding/guest/?registryId=2279991" onclick="_trackEvent('wedding registry', 'clicked', 'name', 'Macys', false);"><img src="http://d150j3rgby0kbc.cloudfront.net/macys_wedding.jpg" /></a>
                 </div>
 
             </div>
