--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
             <div class="col-xs-12 col-sm-10 col-md-10 col-sm-offset-1 col-md-offset-2">
                 <h2>Wedding Registry</h2>
                 <div class="row">
-                    <a class="store bbb" href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos" onclick="_trackEvent('wedding registry', 'clicked', 'name', 'Bed Bath & Beyond', false); return true;" target="_blank"><img src="http://d150j3rgby0kbc.cloudfront.net/wedding_registry.png" /></a>
+                    <a class="store bbb" href="http://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=542471694&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos" onclick="ga('send', 'event', 'wedding registry', 'clicked', 'name', 'Bed Bath & Beyond'); return true;" target="_blank"><img src="http://d150j3rgby0kbc.cloudfront.net/wedding_registry.png" /></a>
 
-                    <a class="store macys" href="http://www.macys.com/registry/wedding/guest/?registryId=2279991" onclick="_trackEvent('wedding registry', 'clicked', 'name', 'Macys', false); return true;" target="_blank"><img src="http://d150j3rgby0kbc.cloudfront.net/macys_wedding.jpg" /></a>
+                    <a class="store macys" href="http://www.macys.com/registry/wedding/guest/?registryId=2279991" onclick="ga('send', 'event','wedding registry', 'clicked', 'name', 'Macys'); return true;" target="_blank"><img src="http://d150j3rgby0kbc.cloudfront.net/macys_wedding.jpg" /></a>
                 </div>
 
             </div>
