--- a/index.html
+++ b/index.html
@@ -142,19 +142,23 @@
                         <p>NY 10314</p>
                         <p>(718) 698-8811</p>
                         <br>
+                        <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call <b>(718)-698-8811</b> and use the code <b>R04.</b></p>
                     </div>
                 </div>
-                </br>
+                <div class="left">
+                    <h2>Shuttle Service!</h2>
+                </div>
                 <div class="row">
                     <div class="col-md-8 left">
                         <div class="textbox hotel-info">
                             <br>
-                            <p>Need a room? Book at the Holiday Inn for our discounted rate of $125/night.  To book call <b>(718)-698-8811</b> and use the code <b>R04.</b></p>
+                            <p><b>Shuttle Service!</b> Shuttle service will be provided to and from the Holiday Inn and the Grand Oaks.</p>
+                            <p>5:15pm - 6:15pm to the Grand Oaks</p>
+                            <p>11:00pm - 12:30am to the Holiday Inn</p>
                             <br>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>    
     </section>
